--- a/crates/proc-macro-api/Cargo.toml
+++ b/crates/proc-macro-api/Cargo.toml
@@ -20,6 +20,7 @@ object = { version = "0.30.2", default-features = false, features = [
     "pe",
 ] }
 serde.workspace = true
+serde_derive.workspace = true
 serde_json = { workspace = true, features = ["unbounded_depth"] }
 tracing = "0.1.37"
 memmap2 = "0.5.4"
