--- a/lib/lsp-server/Cargo.toml
+++ b/lib/lsp-server/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 log = "0.4.17"
 serde_json.workspace = true
 serde.workspace = true
+serde_derive.workspace = true
 crossbeam-channel = "0.5.6"
 
 [dev-dependencies]
