--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,3 +89,5 @@ text-size = "1.1.0"
 serde = { version = "=1.0.156", features = ["derive"] }
 serde_json = "1.0.94"
 triomphe = { version = "0.1.8", default-features = false, features = ["std"] }
+
+rustc_lexer = { version = "0.1.0", package = "ra-ap-rustc_lexer" }
