--- a/crates/syntax/Cargo.toml
+++ b/crates/syntax/Cargo.toml
@@ -17,12 +17,13 @@ cov-mark = "2.0.0-pre.1"
 either = "1.7.0"
 itertools = "0.10.5"
 rowan = "0.15.11"
-rustc_lexer = { version = "727.0.0", package = "rustc-ap-rustc_lexer" }
 rustc-hash = "1.1.0"
 once_cell = "1.17.0"
 indexmap = "1.9.1"
 smol_str.workspace = true
 triomphe.workspace = true
+
+rustc_lexer.workspace = true
 
 parser.workspace = true
 profile.workspace = true
