--- a/lib/ungrammar/Cargo.toml
+++ b/lib/ungrammar/Cargo.toml
@@ -3,7 +3,7 @@ name = "ungrammar"
 description = "A DSL for describing concrete syntax trees"
 version = "1.16.1"
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/matklad/ungrammar"
+repository = "https://github.com/rust-analyzer/ungrammar"
 edition = "2018"
 
 exclude = ["/bors.toml", "/.github"]
