editor/code: Use build script invoking esbuild instead of invoking CLI

--- a/editors/code/tsconfig.eslint.json
+++ b/editors/code/tsconfig.eslint.json
@@ -6,6 +6,7 @@
         "src",
         "tests",
         // these are the eslint-only inclusions
-        ".eslintrc.js"
+        ".eslintrc.js",
+        "./build.mjs"
     ]
 }
