--- a/editors/code/language-configuration.json
+++ b/editors/code/language-configuration.json
@@ -18,7 +18,8 @@
         { "open": "[", "close": "]" },
         { "open": "(", "close": ")" },
         { "open": "\"", "close": "\"", "notIn": ["string"] },
-        { "open": "/*", "close": " */" }
+        { "open": "/*", "close": " */" },
+        { "open": "|", "close": "|" }
     ],
     "autoCloseBefore": ";:.,=}])> \n\t",
     "surroundingPairs": [
