--- a/crates/rust-analyzer/Cargo.toml
+++ b/crates/rust-analyzer/Cargo.toml
@@ -97,6 +97,7 @@ in-rust-tree = [
     "syntax/in-rust-tree",
     "parser/in-rust-tree",
     "rustc-dependencies/in-rust-tree",
+    "hir/in-rust-tree",
     "hir-def/in-rust-tree",
     "hir-ty/in-rust-tree",
 ]
